--- a/endex.html
+++ b/endex.html
@@ -5,191 +5,294 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GAME</title>
-  <link rel="stylesheet" href="XO.css">
   <style>
     body {
-      border-color: blue;
-      background-image: url('bcg4.png');
+  overflow: hidden;
+    background-image: url('bcg4.png');
+    background-repeat: no-repeat;
+    margin: 0;
+    padding: 0;
+    height: 0;
+  }
+
+/*@media only screen and (max-width:200px){
+  div{
+
+    background: red;
+  }
+}*/
+  @keyframes move {
+    from {
+      background: rgba(0, 255, 76, 0.601);
+      transform: translateX(0);
     }
 
-    .xo {
-      width: 300px;
-      margin: auto;
+    to {
+      background: rgba(0, 0, 255, 0.604);
+      transform: translateX(0px);
+    }
+  }
+
+  @keyframes movae {
+    from {
+      border: 12px solid #ae00ff96;
     }
 
-    @keyframes move {
-      from {
-        background: rgb(0, 255, 76);
-        transform: translateX(0);
-      }
-
-      to {
-        background: blue;
-        transform: translateX(0px);
-      }
+    to {
+      border: 12px solid #fe000099;
     }
+  }
+.dropone {
+  position: absolute;
+  width: 24%;
+  height: 19%;
+  background: rgba(156, 211, 149, 0.526);
+  border: 2px solid rgba(137, 43, 226, 0.573);
+  border-radius: 5%;
+  top: 4%;
+  left: 29%;
 
-    @keyframes movae {
-      from {
-        border: 12px solid #ae00ff;
-      }
+text-align: center;
 
-      to {
-        border: 12px solid #fe0000;
-      }
-    }
+}
+/*number*/
+.numbertext {
+  position: absolute;
+  top: 4%;
+  left: 21%;
+  font-size: 497%;
+  text-shadow: 9px 7px 10px black;
+  background-image: url(https://img.freepik.com/free-photo/painting-mountain-lake-with-mountain-background_188544-9126.jpg?size=626&ext=jpg&ga=GA1.1.1826414947.1700092800&semt=ais);
+  background-size: 53%;
+  -webkit-background-clip: text;
+  color: transparent;
+}
 
-    /*animation:movae 3s infinite  ;
-   animation-direction:alternate ;
-   perspective: 1px;*/
+.droptwo {
+  border-radius: 5%;
+  position: absolute;
+  animation: move 3s infinite;
+  animation-direction: alternate;
+  top: 3%;
+  left: 53%;
+  width: 20%;
+  height: 20%;
+  text-align: center;
+  font-family: cursive;
+  border: 2px ridge rgb(255, 0, 0);
+  padding: 0px;
+  }
+  .background {
+      position: relative;
+    border-radius: 30px;
+    left:5%;
+    top: 20%;
+    background-color: rgba(0, 194, 220, 0.651);
+    width: 90%;
+    height: 550px;
+  }
 
-    .ttl {
-
-      animation: move 3s infinite;
-      animation-direction: alternate;
-      perspective: 1px;
-
-      width: 180px;
-      text-align: center;
-      font-family: cursive;
-      border: 2px ridge rgb(255, 0, 0);
-      padding: 9px;
-
-      margin-top: 5px;
-      font-size: 30px;
-
-    }
-
-    .cadar {
-      animation: move 3s infinite;
-      animation-direction: alternate;
-      perspective: 1px;
-
-      width: 80px;
-      text-align: center;
-      font-family: cursive;
-      border: 2px ridge rgb(255, 0, 0);
-      padding: 0px;
-
-    }
-
-    .sqr {
-      border-radius: 30px;
-      width: 96px;
-      height: 96px;
-      background-image: linear-gradient(to right, #ae00ff, #3c03c2f9);
-      float: left;
-      margin: 2px;
-
-
-    }
-
-    .sqr1 {
-      border-radius: 30px;
-      width: 96px;
-      height: 96px;
-      background-image: linear-gradient(to right, #ae00ff, #3c03c2f9);
-      float: left;
-      margin: 2px;
+ 
+  /*spiner*/
 
 
-    }
+  .to {
+    width: 500px;
+    height: 480px;
+    position: relative;
+    bottom: 446px;
+    left: 29.2%;
+}
 
-    .samir {
-      box-shadow: 12px 12px 12px solid #ff0000;
-      border-radius: 30px;
-      margin: auto;
-      margin-left: -250px;
-      margin-top: -120px;
-      background-color: rgba(0, 194, 220, 0.651);
-      width: 800px;
-      height: 500px;
-    }
 
-    .toimg {
-      margin-bottom: 300px;
-      display: flex;
-      flex-wrap: wrap;
-    }
+.spiner {
+  box-shadow: 0px 0px 52px 5px black;
+  border: 2px solid rgb(255, 43, 43);
+    animation: movespiner s infinite linear;
+    width: 400px;
+    height: 400px;
+    background-color: #ff0000ae;
+    position: absolute;
+    top: 35px;
+    left: 20%;
+    border-radius: 50%;
+}
 
-    #img1 {
+#shot{
+   
+    border-radius: 5%;
+    position: absolute;
+    background-color: #000000cb;
+}
+.shot1 {
+  width: 5px;
+  height: 400px;
+  top: 0px;
+  left: 198px;
+  transform: rotate(60deg) translate(0px);
+}
 
-      width: 69px;
-      height: 69px;
-      padding: 13px;
 
-    }
+.shot2 {
+  width: 400px;
+  height: 5px;
+  top: 198px;
+  left: 0px;
+  transform: rotate(30deg) translate(0px);
+}
 
-    .fff {
 
-      display: flex;
+.shot3 {
+    width: 400px;
+    height: 5px;
+    top: 198px;
+    left: 0px;
+    transform: rotate(90deg) translate(0px);
+}
+.shot4{
+    top: 210px;
+    left: 220px;
+    transform: rotate(0deg) translate(0px);
+}
 
-    }
+@keyframes movespiner{
+0%{transform: rotate(360deg);}
+50%{transform: rotate(0deg);}
+100%{ transform: rotate(-360deg);}
+}
+
+ /*******spiner*/
+ #input {
+  position: absolute;
+  top: 1%;
+  right: 59px;
+  width: 0;
+  height: 0;
+  opacity: 0.1;
+  background: red;
+  
+  background-position: 0% 90%;
+}
+ 
+
+input#inputt:checked ~ .to {
+	display: none;
+}
+
+label:after {
+  content: "";
+  position: absolute;
+  width: 12vmin;
+  height: 7vmin;
+  left: 135.05vmin;
+  top: 85.9vmin;
+  border-radius: 32%;
+  background: rgba(255, 0, 0, 0.888);
+  transition: all 1s var(--cbz) 0s;
+  border: 0.5vmin solid #fffc;
+  box-shadow: 0 0 1vmin 0 #fffc, 0 0 1vmin 0 #fffc inset;
+}
+label:active {
+  content: "";
+  position: absolute;
+  width: 12vmin;
+  height: 7vmin;
+  left: 135.05vmin;
+  top: 85.9vmin;
+  border-radius: 32%;
+  background: rgba(255, 0, 0, 0.532);
+  transition: all 1s var(--cbz) 0s;
+  border: 0.5vmin solid #fffc;
+  box-shadow: 0 0 1vmin 0 #fffc, 0 0 1vmin 0 #fffc inset;
+}
+ /*image*/
+ 
+#img{
+  position:absolute;
+  width:132px;
+}
+
+.num1 {
+  transform: rotate(-60deg);
+  top: -1px;
+  left: 4px;
+}
+
+.num3 {
+  transform: rotate(-58deg);
+  top: 138px;
+  left: 66px;
+}
+
+.num5 {
+  transform: rotate(-11deg);
+  top: 62px;
+  left: 135px;
+}
+
+.num7 {
+  transform: rotate(-88deg);
+  top: -9px;
+  left: 24px;
+}
+.num8 {
+  transform: rotate(-89deg);
+  top: 71px;
+  left: 132px;
+}
+
+.num10 {
+  transform: rotate(-89deg);
+  top: -165px;
+  left: -9px;
+}
+
+
   </style>
 </head>
-
 <body>
-
-  <audio class="oda" src="mu2.mp3" loop autoplay muted>
-
-  </audio>
-  <script>
-
-  </script>
-  <div class="xo">
-    <div class="fff">
-      <div class="ttl">
-        <div class="tt">9 + 19 =</div>
-      </div>
-      <div class="cadar"id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-    </div>
-    <div class="sqr1">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">77</h1>
-    </div>
-    <div class="sqr">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">33</h1>
-    </div>
-    <div class="sqr">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">55</h1>
-    </div>
-
-    <div class="sqr">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">88</h1>
-    </div>
-    <div class="sqr">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">38</h1>
-    </div>
-    <div class="sqr">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">55</h1>
-    </div>
-
-    <div class="sqr">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">93</h1>
-    </div>
-    <div class="sqr">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">13</h1>
-    </div>
-    <div class="sqr">
-      <h1  id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">13</h1>
-    </div>
-
-    <div class="samir"> </div>
+  
+  <div class="background">
+      <div class="dropone"><span class="numbertext">5 + 3</span></div>
+      <div class="droptwo" id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <input class="input" id="inputt" type="checkbox"><label for="inputt"></label>
   </div>
- 
-  <!--<style>
-    body {
-      background-image: url(https://i.gifer.com/origin/f5/f5baef4b6b6677020ab8d091ef78a3bc.gif);
-    }
-    </style>
-    </head>
-    <body>
-      <audio controls class="oda" src="mp33.mp3" loop autoplay muted>
-    <h1>Hello World!</h1>
-    
-    <p>This paragraph has an image as the background!</p>
-    -->
+     </div>
+     
+     <div class="to">
+      <div class="spiner">
+        <div id="shot" class="shot1">
+           <img  id="img"  class="num1" src="num1.png" alt="img"  draggable="true" ondragstart="drag(event)">
+           <img  id="img" class="num3" src="num3.png" alt="img"   draggable="true" ondragstart="drag(event)">
+        </div>
+        <div id="shot" class="shot2">
+          <img  id="img" class="num5" src="num5.png" alt="img"   draggable="true" ondragstart="drag(event)">
+        </div>
+        <div id="shot" class="shot3">
+          <img  id="img" class="num7" src="num7.png" alt="img"   draggable="true" ondragstart="drag(event)">
+          <img  id="img" class="num8" src="num8.png" alt="img"   draggable="true" ondragstart="drag(event)">
+          <img style="width: 197px;" id="img" class="num10" src="num10.png" alt="img"  draggable="true" ondragstart="drag(event)">
+        </div>
+        <div id="shot" class="shot4"></div>
+      </div>
+    </div>
 
+  </div>
+  <script>
+    function
+     allowDrop(ev) {
+  ev.preventDefault();
+}
 
+function drag(ev) {
+  ev.dataTransfer.setData("text", ev.target.id);
+}
+
+function drop(ev) {
+  ev.preventDefault();
+  var data = ev.dataTransfer.getData("text");
+  ev.target.appendChild(document.getElementById(data));
+}
+  </script>
 </body>
-
 </html>
